--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,72 @@
-# Prerequisites
-*.d
+<!DOCTYPE html>
+<html lang="ru">
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpot" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <style>
+        .a {
 
-# Precompiled Headers
-*.gch
-*.pch
+            display: inline-block;
+            text-decoration: none;
+            padding: 10px 20px;
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+            width: 55px;
+            height: 20px;
+            background-color: #1565C0;
+            color: white;
+            text-decoration: none
+        }
 
-# Fortran module files
-*.mod
-*.smod
+        .nav_item {
+            display: inline-block;
+        }
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+        .nav_btn {
+            background-color: green;
+            color: white;
+            padding: 30px;
+            border-radius: 30px;
+        }
 
-# Executables
-*.exe
-*.out
-*.app
+        .b {
+            background-color: #00796B;
+            display: inline-block;
+            text-decoration: none;
+            padding: 10px 20px;
+
+            width: 55px;
+            height: 20px;
+            color: white;
+            text-decoration: none;
+        }
+
+        .c{background-color: #FEC007;
+            display: inline-block;
+            text-decoration: none;
+            padding: 10px 20px;
+
+            width: 60px;
+            height: 20px;
+            color:black;
+            text-decoration: none;
+            }
+    </style>
+
+
+</head>
+
+<body>
+    <nav>
+        <ul>
+            <li class="nav_item"><a class="a" href="#">Принять</a></li>
+            <li class="nav_item"><a class="b" href="#">Отмена</a></li>
+            <li class="nav_item"><a class="c" href="#">Обновить</a></li>
+
+        </ul>
+    </nav>
+</body>
+
+</html>
